
  * debian/control:
    + [RA] Suggest libtext-template-perl, needed for HTML reporting.
  * debian/copyright:
    + [RA] Add my copyright statement.
    + [RA] Reference GPL-2, not the GPL symlink, reflecting our license.

  * frontend/lintian:
    + [RA] Allow + and . in tag names in overrides.  Thanks, Stefan
      Fritsch.  (Closes: #454790)
  
  * lib/Dep.pm:
    + [RA] Allow substvars instead of package names so that dependency
      checks against the source debian/control file don't treat all
      substvars as equivalent.  Thanks, Julien Cristau.  (Closes: #456802)
  * lib/Spelling.pm:
    + [RA] Stop doing capitalization checks on all files; there's too much
      of a risk of false positives.  Instead, provide a separate picky
      spelling check function for package descriptions and similar cases
      where we're more sure of the contents.
    + [RA] Expand the picky capitalization checks to catch Debian, GNOME,
      KDE, and Linux.  (Closes: #456582)

  * reporting/html_reports:
    + [RA] Rewritten.
      - Include info, experimental, and overridden tags in the tag pages.
      - Generate a second report for each maintainer showing all tags.
      - Correctly handle multiple different maintainer strings with the
        same e-mail address.
      - Correctly report the version number of a binary package when it
        differs from the source package.  (Closes: #458036)
      - Formatting changes (hopefully improvements) to the web pages.
      - New template-driven system for easier revision of the HTML.
  * reporting/lintian.css:
    + [RA] New minimal style sheet for the HTML reports.
  * reporting/templates/*:
    + [RA] New Text::Template page templates for the HTML reports.

  * testset/runtests:
    + [RA] Test tags for valid characters.

 -- Russ Allbery <rra@debian.org>  Wed, 02 Jan 2008 16:01:02 -0800

lintian (1.23.41) unstable; urgency=low

  The "it would be lovely if there were an actual desktop file standard"
  release.
