@@ -158,11 +158,12 @@ Don't use the overrides file.
 Output tags that have been overriden.
 
 .TP
-.BR \-\-color " (never|always|auto)"
+.BR \-\-color " (never|always|auto|html)"
 Whether to colorize tags in lintian output based on their severity.  The
 default is "never", which never uses color.  "always" will always use
-color, while "auto" will use color only if the output is going to a
-terminal.
+color, "auto" will use color only if the output is going to a terminal,
+and "html" will use HTML <span> tags with a color style attribute (instead
+of ANSI color escape sequences).
 
 .TP
 .BR \-U " info1,info2,..., " \-\-unpack\-info " info1,info2,..."
